# rfi-irfos-web

./: .env.example  .gitignore  CNAME  CONTRIBUTORS.md  Dockerfile  README.md  fly.toml  nginx.conf
.github/workflows/: deploy.yml
backend/: Cargo.toml  content.json
backend/src/: analytics.rs  auth.rs  contact.rs  content.rs  main.rs  track.rs  upload.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html  CNAME  content.json
frontend/public/humanrights/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AdminPanel.tsx  DynamicPage.tsx  LegalPage.tsx  LoginPage.tsx  PublicSite.tsx
frontend/src/hooks/: useAuth.ts  useContent.ts  useLang.ts  useTheme.ts
frontend/src/lib/: github.ts  useStudents.ts  useTestimonials.ts
frontend/src/types/: content.ts  defaultContent.ts  students.ts  testimonials.ts
humanrights_review_queue/: batch_20260724_185601.json
scripts/: hrv_osint_agent.py
